     CHANGES in PHANGORN VERSION 2.0.5

NEW FEATURES 

BUG FIXES

    o fixed bug in KF.dist  

OTHER CHANGES



    CHANGES in PHANGORN VERSION 2.0.4
     
NEW FEATURES

    o new weighted Robinson-Foulds (1979) distance wRF, suggested by Michelle Kendall
    
      and normalized Robinson-Foulds suggested by Sereina Rutschmann

    o codon model "YN98" can be called directly, improved documentation

    o bootstrap.phyDat got an new argument jumble, 
    
      which randomizes input order of sequences
    
OTHER CHANGES

    o more unit tests
    
    

     CHANGES in PHANGORN VERSION 2.0.3

NEW FEATURES 

    o new function maxCladeCred computing the maximum clade credibility tree
     
      from a sample of trees

    o function read.nexus.networx and write.nexus.networx to import / export 
    
      phylogenetic networx to SplitsTree
      
    o function as.AAbin.phyDat to exchange data with the new AAbin class from ape   
    
    o likelihood ratchet (Vos 2003) topology optimisation in optim.pml 
    
    o with KF.dist (Kuhner & Felsenstein) and path.dist can be used like RF.dist  

BUG FIXES

    o improvements to optim.pml to avoid numerical problems, 
    
      can now handle much more taxa (still experimantal)

OTHER CHANGES
    
    o mrca.phylo can be used like mrca from ape (faster for large trees)
    
    o individual splits can be colored in lento plots (suggested by France Thouzé)
    
    o plot.networx now (silently) returns a networx object with some of the graphics
    
      parameters, more plot options
    
    o lots of small changes to make handling and identifying splits, edges in 
     
      trees and networks easier

    o plotBS has a new argument frame and arguments BStrees can be empty
    
    o new vignette IntertwiningTreesAndNetworks
      
      

     CHANGES in PHANGORN VERSION 2.0.2

OTHER CHANGES
 
    o phangorn now suggests only the Biostrings and not depends on it
    