@@ -7,7 +7,7 @@ phy_dnabin <- as.DNAbin(Laurasiatherian)
 phy_align <- phyDat2alignment(Laurasiatherian)
 
 test_that("conversion work as expected", {
-    skip_on_cran()
+##    skip_on_cran()
     expect_that(phy_matrix, is_a("matrix"))
     expect_that(phy_df, is_a("data.frame"))
     expect_that(phy_dnabin, is_a("DNAbin"))
@@ -21,14 +21,16 @@ test_that("conversion work as expected", {
 
 
 test_that("subsetting and combining work as expected", {
-    skip_on_cran()
-    subset_1 <- subset(Laurasiatherian, select = 1:1000, site.pattern = FALSE)
-    subset_2 <- subset(Laurasiatherian, select = 1001:3179, site.pattern = FALSE)
-    lauraCbind1 <- cbind(subset_1, subset_2)
+##    skip_on_cran()
     
-    subset_3 <- subset(Laurasiatherian, select = 1:100)
-    subset_4 <- subset(Laurasiatherian, select = 101:1605)
-    lauraCbind2 <- cbind(subset_3, subset_4)
+    expect_is(subset_1 <- subset(Laurasiatherian, select = 1:1000, site.pattern = FALSE), "phyDat")
+    expect_is(subset_2 <- subset(Laurasiatherian, select = 1001:3179, site.pattern = FALSE), "phyDat")
+    expect_is(lauraCbind1 <- cbind(subset_1, subset_2), "phyDat")
+    expect_equal(baseFreq(lauraCbind1), baseFreq(Laurasiatherian))
     
+    expect_is(subset_3 <- subset(Laurasiatherian, select = 1:100), "phyDat")
+    expect_is(subset_4 <- subset(Laurasiatherian, select = 101:1605), "phyDat")
+    expect_is(lauraCbind2 <- cbind(subset_3, subset_4), "phyDat")
+    expect_equal(baseFreq(lauraCbind2), baseFreq(Laurasiatherian))
 })
 
